--- a/website/style.css
+++ b/website/style.css
@@ -1,11 +1,59 @@
-body{background:#3498db;font-family:sans-serif;font-size:14px;color:#777}
-.title{color:#fff; font-weight: bold; text-align: center; font-size: 3em; margin: 40px;}
-table{margin-left: auto; margin-right: auto; width: 100%;}
-td{text-align: center;}
-form{background:#fff;max-width:480px;margin:40px auto;padding:30px;border-radius:5px;text-align:center;box-shadow: 0px 2px 18px -4px rgba(0,0,0,0.75);}
-input{width:100%;height:44px;border-radius:4px;margin:10px auto;font-size:15px}
-input{border:0;padding:0 15px}
-.btn{background:#3498db;color:#fff;cursor:pointer; width: 60%}
+body{
+  background:#3498db;
+  font-family:sans-serif;
+  font-size:14px;
+  color:#777
+}
+
+.title{
+  color:#fff;
+  font-weight: bold;
+  text-align: center;
+  font-size: 3em;
+  margin: 40px;
+}
+
+table{
+  margin-left: auto; 
+  margin-right: auto;
+  width: 100%;
+}
+
+td{
+  text-align: center;
+  font-size: 1.1em;
+}
+
+form{
+  background:#fff;
+  max-width:480px;
+  margin:40px auto;
+  padding:30px;
+  border-radius:5px;
+  text-align:center;
+  box-shadow: 0px 2px 18px -4px rgba(0,0,0,0.75);
+}
+
+input,.slct{
+  height:44px;
+  border-radius:4px;
+  margin:10px auto;
+  font-size:15px;
+  border:none;
+  padding:0 15px;
+}
+
+.pin {
+  background-color: #eeeeee;
+  width: 2.2em;
+}
+
+.btn,.slct{
+  background:#3498db;
+  color:#fff;
+  cursor:pointer;
+  width: 60%;
+}
 
 /* The Snackbar */
 #snackbar {
